fixed err bug by replacing requestify with request library instead

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "requestify": "^0.2.5"
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
